WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122440
JavaScriptCore fails to build
https://bugs.webkit.org/show_bug.cgi?id=122440
Summary
JavaScriptCore fails to build
Rob Płóciennik
Reported
2013-10-07 00:47:29 PDT
Compilation fails in debug due to 'comparison of unsigned expression >= 0 is always true'.
Attachments
Proposed patch
(1.48 KB, patch)
2013-10-07 00:50 PDT
,
Rob Płóciennik
mark.lam
: review-
mark.lam
: commit-queue-
Details
Formatted Diff
Diff
Proposed patch
(1.41 KB, patch)
2013-10-07 23:17 PDT
,
Rob Płóciennik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rob Płóciennik
Comment 1
2013-10-07 00:50:52 PDT
Created
attachment 213570
[details]
Proposed patch
Mark Lam
Comment 2
2013-10-07 08:59:33 PDT
Comment on
attachment 213570
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=213570&action=review
> Source/JavaScriptCore/debugger/DebuggerCallFrame.cpp:186 > + ASSERT(!callFrame->codeBlock()); > + ASSERT(!callFrame->codeBlock());
These asserts are meaningless without the line and column checks. But you are right that the line and column checks are not valid. Please remove the 2 asserts completely.
Rob Płóciennik
Comment 3
2013-10-07 23:17:48 PDT
Created
attachment 213657
[details]
Proposed patch Hasty patch on my part... Updated accordingly.
Mark Lam
Comment 4
2013-10-07 23:27:15 PDT
Comment on
attachment 213657
[details]
Proposed patch LGTM, but I'll need a reviewer to r+ the patch.
WebKit Commit Bot
Comment 5
2013-10-08 02:40:06 PDT
Comment on
attachment 213657
[details]
Proposed patch Clearing flags on attachment: 213657 Committed
r157093
: <
http://trac.webkit.org/changeset/157093
>
WebKit Commit Bot
Comment 6
2013-10-08 02:40:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug