JavaScriptCore fails to build https://bugs.webkit.org/show_bug.cgi?id=122440

Patch by Robert Plociennik <r.plociennik@samsung.com> on 2013-10-08
Reviewed by Darin Adler.

Compilation fails in debug due to 'comparison of unsigned expression >= 0 is
always true'.

* debugger/DebuggerCallFrame.cpp:
(JSC::DebuggerCallFrame::positionForCallFrame): Removed the offending ASSERTS.

Canonical link: https://commits.webkit.org/140564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157093 268f45cc-cd09-0410-ab3c-d52691b4dbfc